--- a/rwd-layout.html
+++ b/rwd-layout.html
@@ -9,18 +9,42 @@
 </head>
 <body>
   <div class="container">
-    <div class="group1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut distinctio dolorem animi tempore dolores earum enim sapiente minima nisi neque, accusantium voluptatibus temporibus maiores vitae sunt sed quis necessitatibus amet.</div>
-    <div class="group2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut distinctio dolorem animi tempore dolores earum enim sapiente minima nisi neque, accusantium voluptatibus temporibus maiores vitae sunt sed quis necessitatibus amet2</div>
-    <div class="group3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut distinctio dolorem animi tempore dolores earum enim sapiente minima nisi neque, accusantium voluptatibus temporibus maiores vitae sunt sed quis necessitatibus amet3</div>
-    <div class="group4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut distinctio dolorem animi tempore dolores earum enim sapiente minima nisi neque, accusantium voluptatibus temporibus maiores vitae sunt sed quis necessitatibus amet4</div>
-    <div class="group5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut distinctio dolorem animi tempore dolores earum enim sapiente minima nisi neque, accusantium voluptatibus temporibus maiores vitae sunt sed quis necessitatibus amet5</div>
-    <div class="group6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut distinctio dolorem animi tempore dolores earum enim sapiente minima nisi neque, accusantium voluptatibus temporibus maiores vitae sunt sed quis necessitatibus amet6</div>
-    <div class="group7">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut distinctio dolorem animi tempore dolores earum enim sapiente minima nisi neque, accusantium voluptatibus temporibus maiores vitae sunt sed quis necessitatibus amet7</div>
-    <div class="group8">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut distinctio dolorem animi tempore dolores earum enim sapiente minima nisi neque, accusantium voluptatibus temporibus maiores vitae sunt sed quis necessitatibus amet8</div>
-    <div class="group9">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut distinctio dolorem animi tempore dolores earum enim sapiente minima nisi neque, accusantium voluptatibus temporibus maiores vitae sunt sed quis necessitatibus amet9</div>
-    <div class="group10">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut distinctio dolorem animi tempore dolores earum enim sapiente minima nisi neque, accusantium voluptatibus temporibus maiores vitae sunt sed quis necessitatibus amet10</div>
-    <div class="group11">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut distinctio dolorem animi tempore dolores earum enim sapiente minima nisi neque, accusantium voluptatibus temporibus maiores vitae sunt sed quis necessitatibus amet11</div>
-    <div class="group12">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut distinctio dolorem animi tempore dolores earum enim sapiente minima nisi neque, accusantium voluptatibus temporibus maiores vitae sunt sed quis necessitatibus amet12</div>
+    <div class="group1">
+      <div class="box">박스1</div>
+    </div>
+    <div class="group2">
+      <div class="box">박스2</div>
+    </div>
+    <div class="group3">
+      <div class="box">박스3</div>
+    </div>
+    <div class="group4">
+      <div class="box">박스4</div>
+    </div>
+    <div class="group5">
+      <div class="box">박스5</div>
+    </div>
+    <div class="group6">
+      <div class="box">박스6</div>
+    </div>
+    <div class="group7">
+      <div class="box">박스7</div>
+    </div>
+    <div class="group8">
+      <div class="box">박스8</div>
+    </div>
+    <div class="group9">
+      <div class="box">박스9</div>
+    </div>
+    <div class="group10">
+      <div class="box">박스10</div>
+    </div>
+    <div class="group11">
+      <div class="box">박스11</div>
+    </div>
+    <div class="group12">
+      <div class="box">박스12</div>
+    </div>
   </div>
 </body>
 </html>
